--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 typer = "^0.4.0"
 discord-py-interactions = "^3.0.2"
 discord-py-slash-command = "^3.0.1"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
