--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ jedi = "^0.18.0"
 pylint = "^2.11.1"
 black = "^21.9b0"
 pynvim = "^0.4.3"
+isort = "^5.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
