--- a/compose.yml
+++ b/compose.yml
@@ -3,6 +3,7 @@ version: '3.9'
 services:
   bot:
     image: ghcr.io/hackthemidlands/htm-bot:main
+    build: .
     restart: unless-stopped
     environment:
       DISCORD_TOKEN:
